src/parser/LenguajeDatosParser.py
# Generated from grammar/LenguajeDatos.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class LenguajeDatosParser ( Parser ):

    grammarFileName = "LenguajeDatos.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'='", "'cargar_csv_xd'", "'guardar_csv_xd'", 
                     "'seleccionar_xd'", "'filtrar_xd'", "'ordenar_por_xd'", 
                     "'crear_columna_xd'", "'agrupar_por_xd'", "'resumir_xd'", 
                     "'graficar_barras_xd'", "'graficar_lineas_xd'", "'graficar_histograma_xd'", 
                     "'graficar_dispersion_xd'", "'graficar_cajas_xd'", 
                     "<INVALID>", "'ascendente'", "'descendente'", "'separador'", 
                     "'titulo'", "'eje_x'", "'eje_y'", "'guardar'", "'|>'", 
                     "','", "':'", "'('", "')'", "'['", "']'", "'+'", "'-'", 
                     "'*'", "'/'", "'%'", "'>='", "'<='", "'=='", "'!='", 
                     "'>'", "'<'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "CARGAR_CSV_XD", "GUARDAR_CSV_XD", 
                      "SELECCIONAR_XD", "FILTRAR_XD", "ORDENAR_POR_XD", 
                      "CREAR_COLUMNA_XD", "AGRUPAR_POR_XD", "RESUMIR_XD", 
                      "GRAFICAR_BARRAS_XD", "GRAFICAR_LINEAS_XD", "GRAFICAR_HISTOGRAMA_XD", 
                      "GRAFICAR_DISPERSION_XD", "GRAFICAR_CAJAS_XD", "FUNCION_AGG", 
                      "ASCENDENTE", "DESCENDENTE", "SEPARADOR", "TITULO", 
                      "EJE_X", "EJE_Y", "GUARDAR", "PIPE", "COMA", "DOS_PUNTOS", 
                      "PAREN_IZQ", "PAREN_DER", "CORCH_IZQ", "CORCH_DER", 
                      "MAS", "MENOS", "MULT", "DIV", "MOD", "MAYOR_IGUAL", 
                      "MENOR_IGUAL", "IGUAL_IGUAL", "DIFERENTE", "MAYOR", 
                      "MENOR", "ID", "NUMERO", "CADENA", "COMENTARIO", "WS" ]

    RULE_programa = 0
    RULE_sentencia = 1
    RULE_asignacion = 2
    RULE_expresionPipeline = 3
    RULE_expresionBase = 4
    RULE_instruccionCarga = 5
    RULE_instruccionGuardado = 6
    RULE_operacionPipeline = 7
    RULE_operacionSeleccionar = 8
    RULE_operacionFiltrar = 9
    RULE_operacionOrdenar = 10
    RULE_operacionCrearColumna = 11
    RULE_operacionAgrupar = 12
    RULE_operacionResumir = 13
    RULE_listaAgregaciones = 14
    RULE_agregacion = 15
    RULE_instruccionVisualizacion = 16
    RULE_tipoGrafico = 17
    RULE_expresionBooleana = 18
    RULE_opRelacional = 19
    RULE_expresionAritmetica = 20
    RULE_termino = 21
    RULE_factor = 22
    RULE_listaIDs = 23

    ruleNames =  [ "programa", "sentencia", "asignacion", "expresionPipeline", 
                   "expresionBase", "instruccionCarga", "instruccionGuardado", 
                   "operacionPipeline", "operacionSeleccionar", "operacionFiltrar", 
                   "operacionOrdenar", "operacionCrearColumna", "operacionAgrupar", 
                   "operacionResumir", "listaAgregaciones", "agregacion", 
                   "instruccionVisualizacion", "tipoGrafico", "expresionBooleana", 
                   "opRelacional", "expresionAritmetica", "termino", "factor", 
                   "listaIDs" ]

    EOF = Token.EOF
    T__0=1
    CARGAR_CSV_XD=2
    GUARDAR_CSV_XD=3
    SELECCIONAR_XD=4
    FILTRAR_XD=5
    ORDENAR_POR_XD=6
    CREAR_COLUMNA_XD=7
    AGRUPAR_POR_XD=8
    RESUMIR_XD=9
    GRAFICAR_BARRAS_XD=10
    GRAFICAR_LINEAS_XD=11
    GRAFICAR_HISTOGRAMA_XD=12
    GRAFICAR_DISPERSION_XD=13
    GRAFICAR_CAJAS_XD=14
    FUNCION_AGG=15
    ASCENDENTE=16
    DESCENDENTE=17
    SEPARADOR=18
    TITULO=19
    EJE_X=20
    EJE_Y=21
    GUARDAR=22
    PIPE=23
    COMA=24
    DOS_PUNTOS=25
    PAREN_IZQ=26
    PAREN_DER=27
    CORCH_IZQ=28
    CORCH_DER=29
    MAS=30
    MENOS=31
    MULT=32
    DIV=33
    MOD=34
    MAYOR_IGUAL=35
    MENOR_IGUAL=36
    IGUAL_IGUAL=37
    DIFERENTE=38
    MAYOR=39
    MENOR=40
    ID=41
    NUMERO=42
    CADENA=43
    COMENTARIO=44
    WS=45

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(LenguajeDatosParser.EOF, 0)

        def sentencia(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LenguajeDatosParser.SentenciaContext)
            else:
                return self.getTypedRuleContext(LenguajeDatosParser.SentenciaContext,i)


        def getRuleIndex(self):
            return LenguajeDatosParser.RULE_programa

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrograma" ):
                listener.enterPrograma(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrograma" ):
                listener.exitPrograma(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrograma" ):
                return visitor.visitPrograma(self)
            else:
                return visitor.visitChildren(self)




    def programa(self):

        localctx = LenguajeDatosParser.ProgramaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_programa)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 51
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 2199023287304) != 0):
                self.state = 48
                self.sentencia()
                self.state = 53
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 54
            self.match(LenguajeDatosParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SentenciaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def asignacion(self):
            return self.getTypedRuleContext(LenguajeDatosParser.AsignacionContext,0)


        def instruccionGuardado(self):
            return self.getTypedRuleContext(LenguajeDatosParser.InstruccionGuardadoContext,0)


        def instruccionVisualizacion(self):
            return self.getTypedRuleContext(LenguajeDatosParser.InstruccionVisualizacionContext,0)


        def getRuleIndex(self):
            return LenguajeDatosParser.RULE_sentencia

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSentencia" ):
                listener.enterSentencia(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSentencia" ):
                listener.exitSentencia(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSentencia" ):
                return visitor.visitSentencia(self)
            else:
                return visitor.visitChildren(self)




    def sentencia(self):

        localctx = LenguajeDatosParser.SentenciaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_sentencia)
        try:
            self.state = 59
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [41]:
                self.enterOuterAlt(localctx, 1)
                self.state = 56
                self.asignacion()
                pass
            elif token in [3]:
                self.enterOuterAlt(localctx, 2)
                self.state = 57
                self.instruccionGuardado()
                pass
            elif token in [10, 11, 12, 13, 14]:
                self.enterOuterAlt(localctx, 3)
                self.state = 58
                self.instruccionVisualizacion()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AsignacionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(LenguajeDatosParser.ID, 0)

        def expresionPipeline(self):
            return self.getTypedRuleContext(LenguajeDatosParser.ExpresionPipelineContext,0)


        def getRuleIndex(self):
            return LenguajeDatosParser.RULE_asignacion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAsignacion" ):
                listener.enterAsignacion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAsignacion" ):
                listener.exitAsignacion(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAsignacion" ):
                return visitor.visitAsignacion(self)
            else:
                return visitor.visitChildren(self)




    def asignacion(self):

        localctx = LenguajeDatosParser.AsignacionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_asignacion)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 61
            self.match(LenguajeDatosParser.ID)
            self.state = 62
            self.match(LenguajeDatosParser.T__0)
            self.state = 63
            self.expresionPipeline()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpresionPipelineContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expresionBase(self):
            return self.getTypedRuleContext(LenguajeDatosParser.ExpresionBaseContext,0)


        def PIPE(self, i:int=None):
            if i is None:
                return self.getTokens(LenguajeDatosParser.PIPE)
            else:
                return self.getToken(LenguajeDatosParser.PIPE, i)

        def operacionPipeline(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LenguajeDatosParser.OperacionPipelineContext)
            else:
                return self.getTypedRuleContext(LenguajeDatosParser.OperacionPipelineContext,i)


        def getRuleIndex(self):
            return LenguajeDatosParser.RULE_expresionPipeline

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpresionPipeline" ):
                listener.enterExpresionPipeline(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpresionPipeline" ):
                listener.exitExpresionPipeline(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpresionPipeline" ):
                return visitor.visitExpresionPipeline(self)
            else:
                return visitor.visitChildren(self)




    def expresionPipeline(self):

        localctx = LenguajeDatosParser.ExpresionPipelineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_expresionPipeline)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 65
            self.expresionBase()
            self.state = 70
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==23:
                self.state = 66
                self.match(LenguajeDatosParser.PIPE)
                self.state = 67
                self.operacionPipeline()
                self.state = 72
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpresionBaseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def instruccionCarga(self):
            return self.getTypedRuleContext(LenguajeDatosParser.InstruccionCargaContext,0)


        def ID(self):
            return self.getToken(LenguajeDatosParser.ID, 0)

        def CADENA(self):
            return self.getToken(LenguajeDatosParser.CADENA, 0)

        def NUMERO(self):
            return self.getToken(LenguajeDatosParser.NUMERO, 0)

        def getRuleIndex(self):
            return LenguajeDatosParser.RULE_expresionBase

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpresionBase" ):
                listener.enterExpresionBase(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpresionBase" ):
                listener.exitExpresionBase(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpresionBase" ):
                return visitor.visitExpresionBase(self)
            else:
                return visitor.visitChildren(self)




    def expresionBase(self):

        localctx = LenguajeDatosParser.ExpresionBaseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_expresionBase)
        try:
            self.state = 77
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [2]:
                self.enterOuterAlt(localctx, 1)
                self.state = 73
                self.instruccionCarga()
                pass
            elif token in [41]:
                self.enterOuterAlt(localctx, 2)
                self.state = 74
                self.match(LenguajeDatosParser.ID)
                pass
            elif token in [43]:
                self.enterOuterAlt(localctx, 3)
                self.state = 75
                self.match(LenguajeDatosParser.CADENA)
                pass
            elif token in [42]:
                self.enterOuterAlt(localctx, 4)
                self.state = 76
                self.match(LenguajeDatosParser.NUMERO)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InstruccionCargaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CARGAR_CSV_XD(self):
            return self.getToken(LenguajeDatosParser.CARGAR_CSV_XD, 0)

        def CADENA(self, i:int=None):
            if i is None:
                return self.getTokens(LenguajeDatosParser.CADENA)
            else:
                return self.getToken(LenguajeDatosParser.CADENA, i)

        def SEPARADOR(self):
            return self.getToken(LenguajeDatosParser.SEPARADOR, 0)

        def getRuleIndex(self):
            return LenguajeDatosParser.RULE_instruccionCarga

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInstruccionCarga" ):
                listener.enterInstruccionCarga(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInstruccionCarga" ):
                listener.exitInstruccionCarga(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInstruccionCarga" ):
                return visitor.visitInstruccionCarga(self)
            else:
                return visitor.visitChildren(self)




    def instruccionCarga(self):

        localctx = LenguajeDatosParser.InstruccionCargaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_instruccionCarga)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 79
            self.match(LenguajeDatosParser.CARGAR_CSV_XD)
            self.state = 80
            self.match(LenguajeDatosParser.CADENA)
            self.state = 83
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==18:
                self.state = 81
                self.match(LenguajeDatosParser.SEPARADOR)
                self.state = 82
                self.match(LenguajeDatosParser.CADENA)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InstruccionGuardadoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def GUARDAR_CSV_XD(self):
            return self.getToken(LenguajeDatosParser.GUARDAR_CSV_XD, 0)

        def ID(self):
            return self.getToken(LenguajeDatosParser.ID, 0)

        def CADENA(self):
            return self.getToken(LenguajeDatosParser.CADENA, 0)

        def getRuleIndex(self):
            return LenguajeDatosParser.RULE_instruccionGuardado

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInstruccionGuardado" ):
                listener.enterInstruccionGuardado(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInstruccionGuardado" ):
                listener.exitInstruccionGuardado(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInstruccionGuardado" ):
                return visitor.visitInstruccionGuardado(self)
            else:
                return visitor.visitChildren(self)




    def instruccionGuardado(self):

        localctx = LenguajeDatosParser.InstruccionGuardadoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_instruccionGuardado)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 85
            self.match(LenguajeDatosParser.GUARDAR_CSV_XD)
            self.state = 86
            self.match(LenguajeDatosParser.ID)
            self.state = 87
            self.match(LenguajeDatosParser.CADENA)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OperacionPipelineContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def operacionSeleccionar(self):
            return self.getTypedRuleContext(LenguajeDatosParser.OperacionSeleccionarContext,0)


        def operacionFiltrar(self):
            return self.getTypedRuleContext(LenguajeDatosParser.OperacionFiltrarContext,0)


        def operacionOrdenar(self):
            return self.getTypedRuleContext(LenguajeDatosParser.OperacionOrdenarContext,0)


        def operacionCrearColumna(self):
            return self.getTypedRuleContext(LenguajeDatosParser.OperacionCrearColumnaContext,0)


        def operacionAgrupar(self):
            return self.getTypedRuleContext(LenguajeDatosParser.OperacionAgruparContext,0)


        def operacionResumir(self):
            return self.getTypedRuleContext(LenguajeDatosParser.OperacionResumirContext,0)


        def getRuleIndex(self):
            return LenguajeDatosParser.RULE_operacionPipeline

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOperacionPipeline" ):
                listener.enterOperacionPipeline(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOperacionPipeline" ):
                listener.exitOperacionPipeline(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOperacionPipeline" ):
                return visitor.visitOperacionPipeline(self)
            else:
                return visitor.visitChildren(self)




    def operacionPipeline(self):

        localctx = LenguajeDatosParser.OperacionPipelineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_operacionPipeline)
        try:
            self.state = 95
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [4]:
                self.enterOuterAlt(localctx, 1)
                self.state = 89
                self.operacionSeleccionar()
                pass
            elif token in [5]:
                self.enterOuterAlt(localctx, 2)
                self.state = 90
                self.operacionFiltrar()
                pass
            elif token in [6]:
                self.enterOuterAlt(localctx, 3)
                self.state = 91
                self.operacionOrdenar()
                pass
            elif token in [7]:
                self.enterOuterAlt(localctx, 4)
                self.state = 92
                self.operacionCrearColumna()
                pass
            elif token in [8]:
                self.enterOuterAlt(localctx, 5)
                self.state = 93
                self.operacionAgrupar()
                pass
            elif token in [9]:
                self.enterOuterAlt(localctx, 6)
                self.state = 94
                self.operacionResumir()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OperacionSeleccionarContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SELECCIONAR_XD(self):
            return self.getToken(LenguajeDatosParser.SELECCIONAR_XD, 0)

        def listaIDs(self):
            return self.getTypedRuleContext(LenguajeDatosParser.ListaIDsContext,0)


        def getRuleIndex(self):
            return LenguajeDatosParser.RULE_operacionSeleccionar

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOperacionSeleccionar" ):
                listener.enterOperacionSeleccionar(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOperacionSeleccionar" ):
                listener.exitOperacionSeleccionar(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOperacionSeleccionar" ):
                return visitor.visitOperacionSeleccionar(self)
            else:
                return visitor.visitChildren(self)




    def operacionSeleccionar(self):

        localctx = LenguajeDatosParser.OperacionSeleccionarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_operacionSeleccionar)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            self.match(LenguajeDatosParser.SELECCIONAR_XD)
            self.state = 98
            self.listaIDs()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OperacionFiltrarContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FILTRAR_XD(self):
            return self.getToken(LenguajeDatosParser.FILTRAR_XD, 0)

        def expresionBooleana(self):
            return self.getTypedRuleContext(LenguajeDatosParser.ExpresionBooleanaContext,0)


        def getRuleIndex(self):
            return LenguajeDatosParser.RULE_operacionFiltrar

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOperacionFiltrar" ):
                listener.enterOperacionFiltrar(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOperacionFiltrar" ):
                listener.exitOperacionFiltrar(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOperacionFiltrar" ):
                return visitor.visitOperacionFiltrar(self)
            else:
                return visitor.visitChildren(self)




    def operacionFiltrar(self):

        localctx = LenguajeDatosParser.OperacionFiltrarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_operacionFiltrar)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self.match(LenguajeDatosParser.FILTRAR_XD)
            self.state = 101
            self.expresionBooleana()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OperacionOrdenarContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ORDENAR_POR_XD(self):
            return self.getToken(LenguajeDatosParser.ORDENAR_POR_XD, 0)

        def ID(self):
            return self.getToken(LenguajeDatosParser.ID, 0)

        def ASCENDENTE(self):
            return self.getToken(LenguajeDatosParser.ASCENDENTE, 0)

        def DESCENDENTE(self):
            return self.getToken(LenguajeDatosParser.DESCENDENTE, 0)

        def getRuleIndex(self):
            return LenguajeDatosParser.RULE_operacionOrdenar

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOperacionOrdenar" ):
                listener.enterOperacionOrdenar(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOperacionOrdenar" ):
                listener.exitOperacionOrdenar(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOperacionOrdenar" ):
                return visitor.visitOperacionOrdenar(self)
            else:
                return visitor.visitChildren(self)




    def operacionOrdenar(self):

        localctx = LenguajeDatosParser.OperacionOrdenarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_operacionOrdenar)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 103
            self.match(LenguajeDatosParser.ORDENAR_POR_XD)
            self.state = 104
            self.match(LenguajeDatosParser.ID)
            self.state = 106
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==16 or _la==17:
                self.state = 105
                _la = self._input.LA(1)
                if not(_la==16 or _la==17):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OperacionCrearColumnaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CREAR_COLUMNA_XD(self):
            return self.getToken(LenguajeDatosParser.CREAR_COLUMNA_XD, 0)

        def ID(self):
            return self.getToken(LenguajeDatosParser.ID, 0)

        def expresionAritmetica(self):
            return self.getTypedRuleContext(LenguajeDatosParser.ExpresionAritmeticaContext,0)


        def getRuleIndex(self):
            return LenguajeDatosParser.RULE_operacionCrearColumna

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOperacionCrearColumna" ):
                listener.enterOperacionCrearColumna(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOperacionCrearColumna" ):
                listener.exitOperacionCrearColumna(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOperacionCrearColumna" ):
                return visitor.visitOperacionCrearColumna(self)
            else:
                return visitor.visitChildren(self)




    def operacionCrearColumna(self):

        localctx = LenguajeDatosParser.OperacionCrearColumnaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_operacionCrearColumna)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            self.match(LenguajeDatosParser.CREAR_COLUMNA_XD)
            self.state = 109
            self.match(LenguajeDatosParser.ID)
            self.state = 110
            self.match(LenguajeDatosParser.T__0)
            self.state = 111
            self.expresionAritmetica()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

